see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

16-Aug-2010 Jean-Marie Simonet
 $ Customizing a global string in weblinks, newsfeeds, contacts
 
16-Aug-2010 Mark Dexter
 # Reverted [#21558] since it breaks JDateTest unit tests
 # [#21558] Feed datetime formats are invalid (with updated unit test)
 # [#21768] Sample Data for Atomic Template

16-Aug-2010 Andrew Eddie
 # Fixed issue [#21822] Add footer to Bluestork template (Michael Babker).
 # Fixed issue [#21831] JFormFieldCategory relies on a reference to a form (Artyom Bisyarin).
 # Fixed issue [#20994] [patch] Use DOM instead of document.write for font size controls (Rouven Weßling).
 # Fixed issue [#21777] No root user notice on admin login screen with userid (Sander Potjer, Mark Dexter).
 # Fixed issue [#21786] Add uncompressed versions of calendar.js and calendar-setup.js (Rouven Weßling).
 # Fixed issue [#21771] Consistency of ordering status bar items (Michael Babker).
 # Fixed issue [#21227] com_menus don't bind the request data into fields that has multiple="true" (Jonnathan S. Lima, Louis Landry).
 # Fixed issue [#21772] Joomla! doesn't play nicely with other frameworks (Samuel Moffatt).
 # Fixed issue [#21853] Add featured view to com_contacts (like com_content) or just toggle (Roland Dalmulder, Jean-Marie Simonet).
 # Fixed issue [#20662] Joomla home page doesn't work from anything except index.php (Jeff Booher, Louis Landry).
 # Fixed issue [#21854] Replace featured strings with JFEATURED (Roland Dalmulder).
 # Fixed issue [#21841] Make atomic well formed (Rouven Weßling).